refactor: replace direct API calls with codex CLI for AI analysis
- Remove CodexApiClient.java, RateLimiter, CircuitBreaker, RetryHandler
- Simplify CodexClientFactory to always produce CLI clients
- Remove API-specific config (apiKey, endpoint, apiStrategy)
- Clean up CodexProperties, CodexContext, and ClientType
- Update 5 capability files and 2 benchmark files
- Clean up application.yml in codex-integration and api modules
- Remove associated test files
- Update AiAuditPanel.vue with friendly error state UI
- Add retry button for failed AI analysis